fixed audio component on android 4.0.4 and fixed css transition on mobile

--- a/samples/match3/css/main.css
+++ b/samples/match3/css/main.css
@@ -3,8 +3,3 @@
   padding:0;
   overflow: hidden;
 }
-iframe#page{
-    width:100%;
-    height:100%;
-    border:0;
-}
